<resources>
    <string name="app_name">Store App</string>

    <string name="loginToApp">ورود به برنامه</string>
    <string name="enterYourPhone">لطفا شماره موبایل خود را وارد کنید</string>
    <string name="phoneNumber">شماره موبایل</string>
    <string name="sendPhoneNumber">ارسال شماره موبایل</string>
    <string name="sendVerifyCode">ارسال کد تایید</string>
    <string name="loginCode">کد ورود</string>
    <string name="enterVerifyCode">لطفا کد پیامک شده را وارد کنید</string>
    <string name="_0_0_0_0">0000</string>
    <string name="second">ثانیه</string>
    <string name="verifyCode">کد پیامک شده</string>
    <string name="sendAgainVerifyCode">ارسال مجدد کد تایید</string>
    <string name="checkYourNetwork">لطفا ارتباط اینترنتی خود را بررسی کنید</string>
    <string name="version">نسخه</string>
    <string name="home">خانه</string>
    <string name="cart">سبد خرید</string>
    <string name="profile">پروفایل</string>
    <string name="searchProduct">نام کالا را جستجو کنید</string>
    <string name="searchInProducts">جستجو در محصولات</string>
    <string name="quantity">موجودی در انبار :</string>
    <string name="item">عدد</string>
    <string name="toman">تومان</string>
    <string name="price">قیمت</string>
    <string name="price2">قیمت :</string>
    <string name="sortBy">مرتب کردن بر اساس</string>
    <string name="filterNew">جدیدترین‌ها</string>
    <string name="filterExpensive">گران ترین‌ها</string>
    <string name="filterCheep">ارزان‌ترین‌ها</string>
    <string name="filterRate">بیشترین امتیاز</string>
    <string name="filterSell">پرفروش‌ترین‌ها</string>
    <string name="filterHits">پربازدید‌ترین‌ها</string>
    <string name="notFound">آیتمی یافت نشد</string>
    <string name="day">روز</string>
    <string name="hour">ساعت</string>
    <string name="minute">دقیقه</string>
    <string name="colon">:</string>
    <string name="discount">تـخـفـیـف ویـــژه</string>
    <string name="phone">شماره موبایل</string>
    <string name="birthDate">تاریخ تولد</string>
    <string name="wallet">موجودی کیف پول</string>
    <string name="editProfile">ویرایش حساب کاربری</string>
    <string name="increaseWallet">افزایش موجودی کیف پول</string>
    <string name="yourComments">نظراتی که ارسال کردید</string>
    <string name="yourFavorites">علاقه مندی های شما</string>
    <string name="yourAddresses">آدرس های شما</string>
    <string name="delivered">تحویل داده شده</string>
    <string name="pending">در حال ارسال</string>
    <string name="yourOrdersStatus">وضعیت سفارش های شما</string>
    <string name="canceled">لغو شده</string>
    <string name="processing">در حال پردازش</string>
    <string name="categories">دسته بندی ها</string>
    <string name="mobile">گوشی موبایل</string>
    <string name="menShoes">کفش مردانه</string>
    <string name="showAll">نمایش همه</string>
    <string name="stationery">لوازم التحرير</string>
    <string name="homeAppliance">لوازم خانگی برقی</string>
    <string name="laptop">لپتاپ</string>
    <string name="filters">فیلترها</string>
    <string name="submitChanges">ثبت تغییرات</string>
    <string name="priceRange">بازه قیمتی</string>
    <string name="onlyAvailable">فقط محصولات موجود در انبار</string>
    <string name="showMore">نمایش همه</string>
    <string name="guarantee">گارانتی :</string>
    <string name="specialProduct">محصول ویژه</string>
    <string name="brand">برند :</string>
    <string name="category">دسته بندی :</string>
    <string name="addToCart">افزودن به سبد خرید</string>
    <string name="colors">رنگ ها :</string>
    <string name="comments">نظرات</string>
    <string name="features">ویژگی ها</string>
    <string name="priceChart">نمودار قیمت</string>
    <string name="addNewComment">افزودن نظر جدید</string>
    <string name="yourRate">امتیاز شما</string>
    <string name="yourComment">نظر شما</string>
    <string name="writeYourComment">نظر خود را بنویسید</string>
    <string name="submitNewComment">ثبت نظر جدید</string>
    <string name="notEmptyComment">باید نظر خود را بنویسید</string>
    <string name="selectTheOneOfColors">یکی از رنگ ها را باید انتخاب کنید</string>
    <string name="commentsCount">تعداد نظرات :</string>
    <string name="comment">نظر</string>
    <string name="usersRate">امتیاز کاربران :</string>
    <string name="rate">امتیاز</string>
    <string name="existsInCart">موجود در سبد خرید</string>
    <string name="color">رنگ :</string>
    <string name="continuePayment">ادامه فرایند خرید</string>
    <string name="yourTotalPayment">مجموع پرداختی شما :</string>
    <string name="invoice">پیش فاکتور</string>
    <string name="invoiceWithDeliveryPrice">پیش فاکتور همراه با هزینه ارسال</string>
    <string name="pay">پرداخت</string>
    <string name="yourWalletBalance">موجودی کیف پول شما</string>
    <string name="yourAddress">آدرس شما</string>
    <string name="changeAddress">تغییر آدرس</string>
    <string name="address">آدرس :</string>
    <string name="address2">آدرس</string>
    <string name="recipientName">نام گیرنده :</string>
    <string name="recipientName2">نام گیرنده</string>
    <string name="recipientFamily">نام خانوادگی گیرنده</string>
    <string name="recipientPhone">شماره موبایل گیرنده</string>
    <string name="phoneNumber2">موبایل :</string>
    <string name="discountCode">کد تخفیف</string>
    <string name="checkCode">بررسی کد</string>
    <string name="removeCode">حذف کد</string>
    <string name="writeDiscountCode">کد تخفیف را وارد کنید</string>
    <string name="selectYourAddress">آدرس مورد نظر را انتخاب کنید</string>
    <string name="enterTheAmount">مبلغ را وارد کنید</string>
    <string name="chargeTheWallet">شارژ کیف پول</string>
    <string name="submitProfileInfo">ویرایش اطلاعات شخصی</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="idNumber">کد ملی</string>
    <string name="email">ایمیل</string>
    <string name="province">استان :</string>
    <string name="province2">استان</string>
    <string name="city">شهر :</string>
    <string name="city2">شهر</string>
    <string name="postalCode">کد پستی :</string>
    <string name="postalCode2">کد پستی</string>
    <string name="floor">طبقه</string>
    <string name="plateNumber">پلاک</string>
    <string name="addNewAddress">افزودن آدرس جدید</string>
    <string name="editAddress">ویرایش آدرس</string>
    <string name="submitData">ثبت اطلاعات</string>
    <string name="recipientInfo">اطلاعات گیرنده</string>
    <string name="addressInfo">اطلاعات آدرس</string>
    <string name="deleteAddress">حذف کردن آدرس</string>
    <string name="confirmDeleteAddress">آیا از حذف کردن این آدرس مطمئن هستید؟</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="galleryImages">تصاویر گالری</string>
    <string name="logountFromAccount">خروج از حساب کاربری</string>
    <string name="addressCanNotBeEmpty">آدرس نمی تواند خالی باشد</string>
    <string name="tips">نکته</string>
    <string name="disableYourVPN">برای استفاده بهتر از اپلیکیشن، VPN خود را غیرفعال کنید</string>
    <string name="ok">باشه</string>
    <string name="withoutName">بدون نام</string>
    <string name="shouldExistsProductInStore">این محصول در فروشگاه موجود نمیباشد</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>