<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_white"
    android:paddingBottom="@dimen/_10mdp">
    <!--Title-->
    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:gravity="center"
        android:text="@string/deleteAddress"
        android:textColor="@color/darkStrategy"
        android:textSize="@dimen/_12font_mdp"
        app:fontPath="fonts/iransans_bold.ttf" />
    <!--Line-->
    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/titleTxt"
        android:layout_marginTop="@dimen/_10mdp"
        android:alpha="0.5"
        android:background="@color/water" />
    <!--Info-->
    <TextView
        android:id="@+id/infoTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_marginHorizontal="@dimen/_10mdp"
        android:layout_marginTop="@dimen/_10mdp"
        android:gravity="center"
        android:text="@string/confirmDeleteAddress"
        android:textColor="@color/eerieBlack"
        android:textSize="@dimen/_10font_mdp" />
    <!--Yes-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/yesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/infoTxt"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_20mdp"
        android:layout_marginRight="@dimen/_20mdp"
        android:paddingHorizontal="@dimen/_40mdp"
        android:text="@string/yes"
        app:backgroundTint="@color/red"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/_10mdp"
        tools:ignore="RtlHardcoded" />
    <!--No-->
    <TextView
        android:id="@+id/noBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/infoTxt"
        android:layout_alignTop="@id/yesBtn"
        android:layout_alignBottom="@id/yesBtn"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/_20mdp"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_40mdp"
        android:text="@string/no"
        android:textColor="@color/eerieBlack"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>